Header aligment issue on mobile

--- a/public/assets/css/screen.scss
+++ b/public/assets/css/screen.scss
@@ -206,12 +206,19 @@ $box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.27);
 }
 
 @media screen and (max-width: 50em) {
+
+	header {
+		grid-template-columns: 200px min-content;
+	}
+
 	nav {
 		display: none;
 	}
 
 	#hamburger {
-		display: inline-block;
+		display: block;
+		justify-self: flex-end;
+		margin-right: 1rem;
 	}
 }
 
